--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "zod-tiptap",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"description": "Dynamically generate Zod schemas from TipTap extensions for type-safe AI integration and document validation",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -26,7 +26,7 @@
 	],
 	"dependencies": {
 		"@tiptap/core": "^3.15.3",
-		"zod": "^4.3.5"
+		"zod": "4.1.12"
 	},
 	"devDependencies": {
 		"tsup": "^8.5.1",
